--- a/app/src/main/res/drawable/google_button_bg.xml
+++ b/app/src/main/res/drawable/google_button_bg.xml
@@ -1,10 +1,6 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <stroke android:width="1dp" android:color="#E6E6E6"/>
-            <corners android:radius="10dp"/>
-            <padding android:left="12dp" android:top="8dp" android:right="12dp" android:bottom="8dp"/>
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#FFFFFF"/>
+    <stroke android:width="1dp" android:color="#E6E6E6"/>
+    <corners android:radius="10dp"/>
+    <padding android:left="12dp" android:top="8dp" android:right="12dp" android:bottom="8dp"/>
+</shape>
